# media-server

./: .gitignore  README.md  config.ini  pyproject.toml
src/: __init__.py  admin.py  app.py  auth.py  config.py  db.py  home.py  media.py  movies.py  schema.sql  schema_dev.sql
src/static/: base.css  base.js  login.css  login.js  signup.js
src/static/admin/: admin_dashboard.js  admin_movies.js  base.css  edit_genre.css  edit_movie.css  genre.css  home.css  movies.css  style.css  test.css
src/static/movies/: home.css  movie.css  movies_home.js
src/templates/: base.html  home.html  login.html  signup.html  status_403.html  status_404.html
src/templates/admin/: admin_dashboard.html  base.html  edit_genre.jinja2  edit_movie.jinja2  genre.jinja2  home.html  home.jinja2  movies.html  movies.jinja2
src/templates/movies/: home.html  home.jinja2  movie.html  movie.jinja2
